# ac-bc1-codex

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  art_direction.md  build.md  design.md  ideas.md
.github/workflows/: ci-cd.yml
assets/review_sets/: README.md
assets/tools/: generate_pixel_art.py  generate_review_sets.py
docs/test/manualtestcase/: debug_input.md
include/: animation.h  art_assets.h  audio_events.h  game.h  obstacle.h  player.h  score_store.h
src/: animation.c  art_assets.c  audio_events.c  game.c  main.c  obstacle.c  player.c  score_store.c
tests/: animation_test.c
web/: shell.html
